[package]
name = "soundapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.1"
anyhow = "1.0.77"
dotenvy = "0.15.7"
hound = "3.5.1"
serde = { "version" = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
ytd-rs = { "version" = "0.1.7", features = ["yt-dlp"] }
